  * dh_shlibdeps: Ditto.
  * dh_builddeb: Rewrite the hand-written parallel code to use the new
    simplier way of doing it.
  * dh_shlibdeps: Avoid calling file(1) on debug symbols.
  * SUPPORT-POLICY: Include new document that describes the current
    support policy of debhelper compat levels.
  * Dh_Lib.pm: Pass ":unix" layer when using the ":gzip" layer due to
    PerlIO-gzip bug RT#114557.

  [ Iain Lane ]
  * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
    added in 10.3.  (Closes: #863961)
  * dh_install: Pass --exclude/-X to dh_missing. (Closes: #863447)

  [ Michael Stapelberg ]
  * Dh_Getopt: Provide a more detailed error message when there are
    no buildable packages caused by architecture restrictions.
    (Closes: #858467)
  * Dh_Lib: Split package_arch($package) into three distinct functions.

 -- Niels Thykier <niels@thykier.net>  Sun, 04 Jun 2017 11:09:56 +0000

debhelper (10.4) experimental; urgency=medium

  * Team upload.

  [ Niels Thykier ]
  * meson.pm: Pass --wrap-mode=nodownload to meson (requires meson
    0.40-1 or later).
  * dh_install: Fix initialized warning when --sourcedir is absent
    on the cmd-line.
  * dh_missing: Accept --sourcedir (given it is passed by dh_install).
    (Closes: #862049)
  * Dh_Lib.pm: Fix a bug in pkgfile that caused dh to skip helpers
    that had configuration files.  Thanks to Michael Biebl for finding
    and reporting.  (Closes: #863387)

  [ Chris Lamb ]
  * dh_fixperms: Fix regression where dh_fixperms would fail to correct
    permissions because it used an invalid find expression.
    (Closes: #862003)

 -- Michael Biebl <biebl@debian.org>  Fri, 26 May 2017 22:08:37 +0200

debhelper (10.3) experimental; urgency=medium

  [ Helmut Grohne ]
  * Supply PKG_CONFIG for cross compilation with the makefile buildsystem.
    (Closes: #853881)
  * Disable stripping during dh_auto_* in makefile buildsystem in compat 11.
    (Closes: #844077)